# xml-serde

./: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  ser.rs  tag.rs
