[package]
name = "xml_serde"
version = "0.1.0"
authors = ["Q <q@misell.cymru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
xml-rs = "0.8"
hex = "0.4"
regex = "1"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.4"
itertools = "0.9"