[package]
name = "xml_serde"
version = "1.2.2"
edition = "2021"
authors = ["Q <q@as207960.net>"]
license = "MIT"
repository = "https://github.com/as207960/xml-serde"
description = "Namespace aware XML (de)serializer utilizing Serde"
readme = "README.md"

[dependencies]
serde = "1"
serde_derive = "1"
xml-rs = "0.8"
hex = "0.4"
regex = "1"
log = "0.4"
pretty_env_logger = "0.4"
itertools = "0.9"
once_cell = "1.9"
